<resources>
    <string name="app_name">Daily Foto</string>

    <string name="dummy_button">Dummy Button</string>
    <string name="dummy_content">DUMMY\nCONTENT</string>
    <string name="hi_your_detailed_notification_view_goes_here">Hi, Your Detailed notification view goes here....</string>
    <string name="show_notification">Show Notification</string>
    <string name="clear_notification">Clear Notification</string>
    <string name="take_picture">Take Picture</string>
    <string name="debug">Gallery</string>
    <string name="debug2">Single Image</string>
    <string name="singleimagefromgallery">SingleImageFromGallery</string>
    <string name="diplayimagesinfolder">diplayImagesInFolder</string>
    <string name="grant_storage_permission">Grant Storage permissions</string>
    <string name="action_settings">Action Settings</string>
    <string name="action_favorite">Add Favourite</string>

    <!-- Navigation Drawer -->
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="openDrawer">open_drawer</string>
    <string name="closeDrawer">close_drawer</string>

    <!-- Navigation Drawer menu labels -->
    <string name="nav_home">Home</string>
    <string name="nav_photos">Photos</string>
    <string name="nav_movies">Movies</string>
    <string name="nav_notifications">Notifications</string>
    <string name="nav_settings">Settings</string>
    <string name="nav_about_us">About Us</string>

    <!-- Toolbar titles when navigation menu item is selected -->
    <string-array name="nav_item_activity_titles">
        <item>Home</item>
        <item>Photos</item>
        <item>Movies</item>
        <item>Notifications</item>
        <item>Settings</item>
    </string-array>

    <string name="activity_title_about_us">About Us</string>
    <string name="activity_title_privacy_policy">Privacy Policy</string>
    <string name="action_clear_all">Clear All</string>
    <string name="action_logout">Logout</string>
    <string name="action_mark_all_read">Mark All as Read</string>
    <string name="privacy_policy">Privacy Policy</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <string name="about_us">Welcome to my application.
    This application was developed for personal purposes.
    I am Julian Eiler, a M.Sc. student of electrical engineering and information technology.
    I am currently working on my masters thesis and develop this application in my freetime.</string>
</resources>
