<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    tools:context="com.androiddev.julianeiler.dailyfoto.fragment.HomeFragment">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_weight="1">

            <Button
                android:id="@+id/btnShowNotification"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/show_notification"
                android:layout_weight="1"/>

            <Button
                android:id="@+id/btnClearNotification"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/clear_notification"
                android:layout_weight="1"/>
        </LinearLayout>


        <FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
            android:id="@+id/fragment_container"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="99"
            android:columnWidth="90dp"
            android:gravity="center"
            android:horizontalSpacing="10dp"
            android:numColumns="auto_fit"
            android:stretchMode="columnWidth"
            android:verticalSpacing="10dp"/>

        <Button
            android:id="@+id/btnTakePicture"
            android:layout_width="match_parent"
            android:layout_height="100dp"
            android:text="@string/take_picture"
            android:layout_gravity="bottom"
            android:layout_weight="1"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:orientation="horizontal"
            android:layout_gravity="bottom"
            android:layout_weight="1">

            <Button
                android:id="@+id/btnDebug"
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:text="@string/debug"
                android:layout_gravity="bottom"
                android:layout_weight="1"/>

            <Button
                android:id="@+id/btnDebug2"
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:text="@string/debug2"
                android:layout_gravity="bottom"
                android:layout_weight="1"/>
        </LinearLayout>
</LinearLayout>
